fix accidentally visible formatting help checkbox

--- a/assets/css/_form/formatting-help.less
+++ b/assets/css/_form/formatting-help.less
@@ -10,7 +10,7 @@
   }
 
   &__toggle {
-    opacity: 1;
+    opacity: 0;
     position: absolute;
     z-index: -1;
   }
